# cscli

./: .editorconfig  .gitignore  .readthedocs.yaml  .travis.yml  CONTRIBUTING.rst  LICENSE  Makefile  README.md  README.rst  config.yaml  configure  pytest.ini  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
.github/: ISSUE_TEMPLATE.md
cscli/: __init__.py  __main__.py  api_client.py  cli.py  client.py  error.py  original_cli.py  server.py  util.py
cscli/commands/: cmd_drive.py  cmd_ip.py  cmd_list.py  cmd_server.py  cmd_vlan.py
docs/: Makefile  conf.py  cscli.commands.rst  cscli.rst  index.rst  installation.rst  make.bat  modules.rst  requirements.txt  usage.rst
docs/source/: conf.py  description.rst  index.rst  installation.rst  modules.rst  netchat.rst
make.include/: browser.mk  clean.mk  common.mk  docs.mk  lint.mk  pypi.mk  pytest.mk  test.mk  version.mk  yapf.mk
module_template/: __init__.py  __main__.py  cli.py  constant.py  context.py  exception.py
tests/: __init__.py  conftest.py  test_cli.py  test_client.py  test_cscli.py  test_list.py
tests/cassettes/: test_client_list_all_brief.yaml  test_client_list_all_detail.yaml  test_client_list_all_none.yaml  test_client_list_all_text.yaml  test_client_list_all_uuid.yaml  test_client_list_capabilities_brief.yaml  test_client_list_capabilities_detail.yaml  test_client_list_capabilities_none.yaml  test_client_list_capabilities_text.yaml  test_client_list_capabilities_uuid.yaml  test_client_list_drives_brief.yaml  test_client_list_drives_detail.yaml  test_client_list_ips_brief.yaml  (+52 more)
