[bumpversion]
current_version = 0.0.1
tag-name = "v{new_version}"
tag-message = "Release {new_version}"
tag = True
commit = True

[metadata]
name = {{ config.project }}
version = attr: {{ config.project }}.__version__
description = {{ config.description.medium }}
long_description = file: README.md
long_description_content_type = text/markdown
license = {{ config.license }}
url = {{ config.url }}
classifiers =
 Programming Language :: Python :: 3
 License :: OSI Approved :: MIT License
 Operating System :: OS Independent
 Environment :: Console

[options]
python_requires = >= {{ config.python_version }}
packages = find:
zip_safe = False
include_package_data = True
install_requires = 
	click

[options.extras_require]
test = 
	pytest
	pytest-click
	tox
dev = 
	bumpversion
	twine
	yapf
	python-dotenv
	sphinx
	sphinx-click
	sphinx-rtd-theme
	sphinx-serve

[options.package_data]
* = 
	VERSION
	LICENSE

[options.entry_points]
console_scripts = 
	{{ config.project }} = {{ config.project }}:cli

[bumpversion:file:VERSION]
[bumpversion:file:{{ config.project }}/__init__.py]
